Fixed table overflow

--- a/assets/layout.scss
+++ b/assets/layout.scss
@@ -352,6 +352,10 @@ th, td {
   font-weight: bold;
 }
 
+.overflow {
+  overflow: auto;
+}
+
 span {
   display: inline-block;
 }
